remove hover button effect for smaller devices

--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -101,3 +101,28 @@ a.btn {
     margin-bottom: auto;
   }
 }
+
+.play-release {
+  &-button {
+    cursor: pointer;
+    display: flex;
+
+    @include media-breakpoint-up(lg) {
+      &:hover:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.5;
+      }
+    }
+  }
+  &-inner {
+    display: flex;
+    height: 100%;
+    width: 100%;
+  }
+}
