Tweak for mobile

--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -167,6 +167,10 @@
   }
   &__gallery {
     padding-right: 2em;
+    margin-bottom: 2em;
+    &:last-child {
+      padding-right: inherit;
+    }
     .carousel-control {
       &-prev {
         img {
