--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -40,23 +40,25 @@
       letter-spacing: 0px;
       display: flex;
       margin-top: auto;
+      margin-bottom: auto;
       justify-content: space-between;
       font-size: 12px;
       .track-info {
-        padding-bottom: 5px;
-        display: inline-flex;
-
+        //padding-bottom: 5px;
+        min-width: 50%;
+        //display: inline-flex;
+        //
         overflow: hidden;
-        //white-space: nowrap;
-        text-overflow: ellipsis;
+        white-space: nowrap;
+        //text-overflow: ellipsis;
       }
       .release-title {
         font-size: $font-size-sm;
         line-height: $font-size-sm;
         color: $gray-color-1;
-        overflow: hidden;
+        //overflow: hidden;
         //white-space: nowrap;
-        text-overflow: ellipsis;
+        //text-overflow: ellipsis;
       }
       .track-time {
         display: inline-flex;
