--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.desktop {
+
+}
+
 .list-item {
   position: relative;
   flex: 1;
@@ -68,6 +72,7 @@
     height: 400px;
   }
   @include media-breakpoint-up(lg) {
+
     .resizable-list-item-outer {
       &:hover {
         background-color: white;
