--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -50,7 +50,10 @@
   .frontpage {
     &__teaser {
       width: 100%;
-      max-height: 300px;
+      @include media-breakpoint-down(xs) {
+        max-height: 300px;
+      }
+      max-height: 400px;
       padding-left: inherit;
       padding-right: inherit;
       margin-left: inherit;
