Tweak padding for frontpage

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -127,9 +127,9 @@
         padding: 0.8rem;
         img {
           padding-bottom: inherit;
-          margin-right: 15px;
-          margin-left: 15px;
-          margin-top: -4px;
+          //margin-right: 15px;
+          //margin-left: 15px;
+          //margin-top: -4px;
         }
         .feature {
           width: 100%;
