--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -319,12 +319,18 @@
     @include media-breakpoint-down(sm) {
       .navigation {
         position: fixed;
-        left: -180px;
-        top: 140px;
+        right: 0;
+        top: 0;
         height: 100vh;
-        width: 180px;
+        width: 80%;
         z-index: 3;
-        background-color: $white;
+        color: $gray-color-2;
+        .nav-link {
+          color: $gray-color-2;
+        }
+        font-weight: normal;
+
+        background-color: $brand-color-black;
         padding-left: 0;
         padding-right: $global-padding;
         padding-top: $global-padding * 2;
