--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -333,6 +333,8 @@
     .navigation {
       //height: inherit;
       transition: 0.5s ease-in-out;
+      width: 80%;
+      max-width: 300px;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
