Add top margin to reset password button

--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -345,13 +345,13 @@
 .reset-password {
   &__panel {
     h3 {
-      //margin-top: 6rem !important;
       margin-bottom: 2rem !important;
     }
     .description {
       margin-bottom: 1rem;
     }
     .btn {
+      margin-top: 1rem;
       width: 100%;
     }
   }
