--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -115,3 +115,13 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.bottom {
+  height:auto;
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  padding:0;
+  z-index: 10;
+}
