--- a/assets/css/storefront/components/_carousel.scss
+++ b/assets/css/storefront/components/_carousel.scss
@@ -37,3 +37,12 @@
     background-color: $brand-color-green !important;
   }
 }
+
+.animateXyz { transition: transform 0.3s ease-out; }
+
+.holder {
+  height: 100%;
+  max-height: 500px;
+  height: 100%;
+  overflow-y: hidden;
+}
