Fix main navigation

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -113,6 +113,8 @@
     }
   }
   &__search {
+    margin-top: auto;
+    margin-bottom: auto;
     position: relative;
     display: inline-block;
     .mobile-search-icon {
