Make Results Filter Options configurable

--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -39,3 +39,4 @@
 @import "components/customer-info";
 @import "components/common";
 @import "components/mobile";
+@import "components/filter-modal";
