--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -116,7 +116,7 @@
   position: fixed;
   bottom: 60px;
   z-index: 9;
-  height: 50%;
+  max-height: 50%;
   width: 100%;
   font-size: $font-size-sm;
   overflow-y: scroll;
