--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -93,6 +93,8 @@
             background-position: right bottom;
             background-repeat: no-repeat;
             background-size: auto 100%;
+            display: flex;
+            flex-direction: column;
           }
         }
       }
