--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -208,6 +208,26 @@
   &__review {
     display: flex;
     flex-direction: column;
+    position: relative;
+    .placing-order {
+      position: absolute;
+      display: flex;
+      height: 100%;
+      width: 100%;
+      z-index: 1;
+      &:after {
+        position: absolute;
+        content: '';
+        opacity: 0.5;
+        width: 100%;
+        height: 100%;
+        background-color: $brand-color-black;
+        z-index: 1;
+      }
+      .loading-text {
+        color: $brand-color-black
+      }
+    }
     .cart {
       border: 1px solid $gray-color-2;
     }
