Tweak Add to cart button and remove console logs

--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -158,10 +158,10 @@ $bestseller-item-padding: 7px;
     }
     .release__button-bar {
       margin-left: auto;
-      margin-right: 0.3em;
+      margin-right: 1rem;
       margin-top: 0;
       &__add-to-cart {
-        width: 9em;
+        width: 10rem;
         font-size: $font-size-sm;
         letter-spacing: 1px;
         img {
