--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -17,7 +17,7 @@ $font-factor: 0.9;
       display: inline-block;
       line-height: 48px;
       //width: 12em;
-      padding: .5rem 2rem;
+      padding: 0 2rem;
       color: white;
       text-align: center;
       font-size: $font-factor + em;
