Use display flex instead of block

--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -91,7 +91,7 @@
 
         z-index: 1;
         .release-list-add {
-          display: block;
+          display: flex;
         }
         .release-list-info__label {
           display: block;
@@ -149,7 +149,7 @@
 
         z-index: 1;
         .release-list-add {
-          display: block;
+          display: flex;
         }
         .release-list-info__label {
           display: block;
