--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -27,7 +27,7 @@ a.btn {
   &.primary {
     background-color: $brand-color-green;
     color: $white;
-    padding: 0 $global-padding * 4;
+    padding: 0 $global-padding * 4 !important;
     font-weight: 300;
     &:hover {
       background-color: darken($brand-color-green, 5%);
