Add design tweaks and default charts images for bestsellers

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -19,6 +19,7 @@
       border-right: none;
     }
     .add-to-cart {
+      cursor: pointer;
       img {
         height: 20px;
         width: 20px;
@@ -114,7 +115,7 @@
   background-color: $brand-color-black;
   color: $gray-color-1;
   position: fixed;
-  bottom: 60px;
+  bottom: 70px;
   z-index: 9;
   max-height: 50%;
   width: 100%;
