--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -218,10 +218,10 @@
       &:after {
         position: absolute;
         content: '';
-        opacity: 0.5;
+        opacity: 0.6;
         width: 100%;
         height: 100%;
-        background-color: $brand-color-black;
+        background-color: white;
         z-index: 1;
       }
       .loading-text {
