Remove bottom-margin on main navigation

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -283,7 +283,7 @@
     .navigation {
       ul {
         font-weight: 400 !important;
-        margin-bottom: $global-margin;
+        //margin-bottom: $global-margin;
         display: block;
         text-align: center;
         &.no-border {
