--- a/assets/css/storefront/variables.scss
+++ b/assets/css/storefront/variables.scss
@@ -13,6 +13,9 @@ $form-active: #FFFAEC;
 $brand-color-green: #30C46C;
 $brand-color-black: #313532;
 
+$brand-color-green-hover: #29AB5D;
+$brand-color-black-hover: #494F4A;
+
 $brand-secondary-color-red: #FF8174;
 $brand-secondary-color-blue: #278AB3;
 $brand-secondary-color-yellow: #FFB96E;
