Tweak button hovers

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -107,6 +107,11 @@
     }
     &__btn {
       position: relative;
+      &.play {
+        &:hover {
+          background-color: $brand-color-green-hover !important;
+        }
+      }
     }
   }
 }
