--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -108,15 +108,8 @@ a.btn {
     display: flex;
 
     @include media-breakpoint-up(lg) {
-      &:hover:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: black;
-        opacity: 0.5;
+      &:hover {
+        background-color: $brand-color-green-hover !important;
       }
     }
   }
