--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -209,6 +209,7 @@
     }
     &__search {
       width: 190px;
+      transition: width .2s ease-in;
       float: right;
       position: relative;
       .mobile-close-search {
@@ -227,10 +228,11 @@
         border-radius: 100px;
         padding-left: $global-padding * 1.9;
         padding-right: $global-padding;
+        transition: width 1s;
         &:focus {
           background-color: white;
-          border: 1px $brand-color-black;
-          outline: inherit;
+          border: 1px solid $brand-color-black;
+          //outline: inherit;
         }
       }
       .btn {
@@ -274,6 +276,7 @@
       }
       &.active {
         width: 120% !important;
+        transition: width 0.1s ease-out;
       }
     }
     &-box {
