--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -125,3 +125,14 @@ body {
   padding:0;
   z-index: 10;
 }
+
+.close {
+  position: relative;
+  margin: auto;
+  margin-right: 5px;
+  width:14px;
+  height:14px;
+  background:
+          -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, $brand-color-black 48%,  $brand-color-black 52%, transparent 52%, transparent 100%),
+          -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, $brand-color-black 48%,  $brand-color-black 52%, transparent 52%, transparent 100%);
+}
