Make Audioplayer cart link green and pointer cursor

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -20,11 +20,14 @@
     &:last-child {
       border-right: none;
     }
-    .add-to-cart {
+    &.add-to-cart {
       cursor: pointer;
       img {
         height: 20px;
         width: 20px;
+      }
+      &:hover {
+        background-color: $brand-color-green;
       }
     }
 
