Tweak audioplayer tracklist and remove playlist play button border radius

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -58,6 +58,7 @@
         font-size: $font-size-sm;
         line-height: $font-size-sm;
         color: $gray-color-1;
+        padding-right: 2%;
       }
       .track-time {
         display: inline-flex;
