--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -272,6 +272,7 @@ $bestseller-item-padding: 7px;
             .release-thumb {
               .chart-list-play {
                 display: inline-block;
+                border-radius: 0px !important;
               }
             }
           }
